--- a/pages/_includes/_page-header.njk
+++ b/pages/_includes/_page-header.njk
@@ -1,145 +1,1 @@
-{% from "global_image.njk" import global_image %}
-
-{% macro nav_link(label, url, className="") %}
-    <a href="{{url}}" class="text-base text-gray-800 hover:text-blue-800 no-underline pt-1 {{className}}">
-        {{label}}
-    </a>
-{% endmacro %}
-{% macro nav_dropdown(nav) %}
-    <div class="relative">
-        <!-- Item active: "text-gray-900", Item inactive: "text-gray-500" -->
-        <button type="button"
-            class="flyout-btn inline-flex text-gray-800 group text-base hover:text-blue-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
-            aria-expanded="false">
-            <span>{{nav.label}}</span>
-            <svg class="text-gray-800 h-5 w-5 group-hover:text-gray-500 mt-1" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                <path fill-rule="evenodd"
-                    d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-                    clip-rule="evenodd" />
-            </svg>
-        </button>
-
-        <div class="flyout absolute -ml-4 mt-3 transform z-10 px-2 w-48 sm:px-0 lg:ml-0 lg:left-1/2 lg:-translate-x-1/2">
-            <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
-                <div class="relative grid gap-2 bg-white p-2">
-                    {% for menu in nav.menus %}
-                        <a href="{{menu.link}}" class="py-1 flex items-start rounded-lg hover:bg-gray-50 no-underline">
-                            <img src = "images/{{menu.icon}}" alt="{{menu.lable}}" />
-                            <div class="ml-4">
-                                <p class="text-base font-medium text-gray-900">
-                                    {{menu.label}}
-                                </p>                                   
-                            </div>
-                        </a>
-                    {% endfor %}                    
-                </div>
-            </div>
-        </div>
-    </div>
-{% endmacro %}
-{% macro company_logo() %}
-    <a href="/" class="grid grid-flow-col auto-cols-max gap-2 items-center no-underline">
-        <img src = "images/logo_sm.svg" height="40" width="40" alt="Logo" class="h-10" />
-        <span class="font-semibold text-gray-800 text-xl font-serif">Janani</span>
-    </a>
-{% endmacro %}
-
-<div class="max-w-7xl mx-auto px-4 sm:px-6 relative">
-    <div class="flex justify-between items-center py-2 md:justify-start md:space-x-10">
-        {# Company logo #}
-        <div class="flex justify-start lg:w-0 lg:flex-1">
-            {{company_logo()}}
-        </div>
-
-        {# Burger button #}
-        <div class="-mr-2 -my-2 md:hidden">
-            <button type="button"
-                class="burger-menu bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500"
-                aria-expanded="false">
-                <span class="sr-only">Open menu</span>
-                <!-- Heroicon name: outline/menu -->
-                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-                </svg>
-            </button>
-        </div>
-
-        {# Nav links #}
-        <nav class="hidden md:flex space-x-4">
-            {% for nav in data.navbar %}
-                {% if nav.dropdown %}
-                    {{nav_dropdown(nav)}}                
-                {% else %}
-                    {{nav_link(nav.label, nav.link)}}                
-                {% endif %}
-            {% endfor %}
-        </nav>
-
-        {# Hot number #}
-        <div class="hidden md:flex items-center justify-end space-x-8 md:flex-1 lg:w-0">
-            <a href="tel:01686763706" class="transition duration-500 ease-in-out hover:bg-red-600 px-2 py-1 text-base text-white bg-gray-800 hover:text-gray-200 no-underline rounded-full">
-                01686-763706
-            </a>
-        </div>
-    </div>
-
-    <div class="flyby-mobile absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
-        <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
-            <div class="pt-5 pb-6 px-5">
-                <div class="flex items-center justify-between">
-                    {{company_logo()}}
-                    <div class="-mr-2">
-                        <button type="button"
-                            class="burger-menu bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-blue-500">
-                            <span class="sr-only">Close menu</span>
-                            <!-- Heroicon name: outline/x -->
-                            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M6 18L18 6M6 6l12 12" />
-                            </svg>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="mt-6">
-                    <nav class="grid gap-y-1">
-                         {% for nav in data.navbar %}
-                            {% if not nav.dropdown %}                                    
-                               {{nav_link(nav.label, nav.link, className="hover:bg-gray-50 py-2 font-medium pl-5")}}                
-                            {% endif %}
-                        {% endfor %}                        
-                    </nav>
-                </div>
-            </div>
-            <div class="py-6 px-5 space-y-6">
-                <div class="grid grid-cols-2 gap-y-4 gap-x-2">
-                    {% for nav in data.navbar %}
-                        {% if nav.dropdown %} 
-                            {% for menu in nav.menus %}
-                                <a href="{{menu.link}}" class="py-1 flex items-start rounded-lg hover:bg-gray-50 no-underline">
-                                    <img src = "images/{{menu.icon}}" alt="{{menu.lable}}" />
-                                    <div class="ml-4">
-                                        <p class="text-base font-medium text-gray-900">
-                                            {{menu.label}}
-                                        </p>                                   
-                                    </div>
-                                </a>
-                            {% endfor %}  
-                        {% endif %}
-                    {% endfor %}                       
-                </div>
-                <div>
-                    <p class="mt-6 text-center text-base font-medium text-gray-500">
-                        Welcome to 
-                        <a href="/" class="text-blue-600 hover:text-blue-500">
-                            Janani Technology
-                        </a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<nav>Navigation Here</nav>
