--- a/pages/index/index.njk
+++ b/pages/index/index.njk
@@ -1,102 +1,10 @@
 ---
 layout: base.njk
 pagename: index
-meta_title: "Janani Technology Limited"
+meta_title: "Bay Cruise ship "
 permalink: "docs/index.html"
 permalinkBypassOutputDir: true
 nickname: "You Thing"
 ---
-<!-- Hero section -->
-<section class="bg-gray-100 max-w-8xl mx-auto p-4 md:p-8 rounded-lg md:my-10">
-    <article class="grid grid-cols-1 md:grid-cols-2 pb-10">
-        <section class="md:hidden">
-            <img src="images/chill.svg" alt="Service and Chill" width="100" height="100" class="w-full h-auto" />
-        </section>
-        <section class="flex flex-col justify-center max-w-md md:pl-10 items-center md:items-baseline pt-10">
-            <h3 class="text-2xl md:text-4xl font-bold pb-2 md:pb-4"> Take our Internet </h3>
-            <h3 class="text-2xl md:text-4xl font-bold pb-8"> Service and Chill </h3>
-            <p class="text-base text-center md:text-left pb-6">Looking for fast broadband without any line problem? Look
-                no further! We even
-                include Netphone with every plan, offering great rates and call value.</p>
-            <div>
-                <a href="tel:01686763706" class="transition duration-500 ease-in-out hover:bg-red-600 px-6 py-2 text-base text-white bg-gray-800 hover:text-gray-200 no-underline rounded-full">Call Now</a>
-            </div>
-        </section>
-        <section class="hidden md:block">
-            <img src="images/chill.svg" alt="Service and Chill" width="100" height="100" class="w-full h-auto" />
-        </section>
-    </article>
-</section>
 
-<!-- About us section  -->
-<section class="max-w-7xl mx-auto p-4 md:p-8 rounded-lg md:my-10">
-    <article class="text-center">
-        <header class="text-base text-gray-600 uppercase tracking-widest">{{data.about.name}}</header>
-        <h4 class="text-2xl md:text-3xl font-extrabold">{{data.about.title}}</h4>
-        <p class="text-base text-gray-600 max-w-md mx-auto">{{data.about.description}}</p>
-    </article>
-    <section class="my-20 grid grid-cols-1 md:grid-cols-3 gap-5">
-        {% for item in data.about.features %}
-            <article class="m-2 p-8 border rounded-xl cursor-pointer hover:shadow-lg hover:bg-gray-50">
-                <header class="text-xl font-bold pb-5">{{item.title}}</header>
-                <p class="text-sm text-gray-600">{{item.description}}</p>
-            </article>
-        {% endfor %}
-    </section>
-</section>
-
-<!-- Packages -->
-<section class="bg-gray-100 max-w-8xl mx-auto p-4 md:p-8 rounded-lg md:my-10">
-    <article>
-        <header class="text-base text-gray-600 uppercase tracking-widest">{{data.packages.name}}</header>
-        <h4 class="text-2xl md:text-3xl font-extrabold">{{data.packages.title}}</h4>
-        <p class="text-base text-gray-600 max-w-md mx-auto">{{data.packages.description}}</p>
-    </article>
-    <section class="my-20 grid grid-cols-1 md:grid-cols-3 gap-5">
-        {% for pak in data.packages.packages %}
-            <article class="relative m-2 p-8 border rounded-xl cursor-pointer hover:shadow-lg bg-gray-50 hover:bg-white">
-                <header class="grid grid-cols-2 pb-6 mb-6 border-b">
-                    <div><span class="text-4xl font-bold">৳{{pak.price}}</span><span class="text-sm text-gray-500">/Month</span></div>
-                    <div class="text-right text-3xl font-bold">{{pak.name}}</div>
-                </header>
-                {% for feat in pak.features %}
-                    <div class="text-base py-2"><img src="images/check-mark.svg" height="20" width="20" class="inline-block" /> <span class="pl-4">{{feat | safe}}</span></div>
-                {% endfor %}
-                <div class="text-center pt-8">
-                    <a href="{{pak.cta.url}}" class="transition duration-500 ease-in-out hover:bg-red-600 px-6 py-2 text-base text-white bg-gray-800 hover:text-gray-200 no-underline rounded-full ">{{pak.cta.label}}</a>
-                </div>
-                {% if pak.popular %}
-                    <div class="absolute top-1 -left-2 bg-red-600 text-white px-2 pb-1 rounded-r-full">
-                        Most popular
-                        <div class="packages-shadow"></div>
-                    </div>
-                {% endif %}
-            </article>
-        {% endfor %}
-    </section>
-</section>
-
-<!-- Our Servcie -->
-<section class="max-w-7xl mx-auto p-4 md:p-8 rounded-lg md:my-10">
-    <article class="text-center">
-        <header class="text-base text-gray-600 uppercase tracking-widest">{{data.our_services.name}}</header>
-        <h4 class="text-2xl md:text-3xl font-extrabold">{{data.our_services.title}}</h4>
-        <p class="text-base text-gray-600 max-w-md mx-auto">{{data.our_services.description}}</p>
-    </article>
-    <section class="my-20 grid grid-cols-1 md:grid-cols-3 gap-5">
-        {% for item in data.our_services.services %}
-            <article class="m-2 p-8 border rounded-xl cursor-pointer hover:shadow-lg hover:bg-gray-50">
-                <img src="images/{{item.character}}" height="250" width="300" class="pb-4 mb-4 h-72 w-auto mx-auto border-b" /> 
-
-                <header class="text-xl font-bold pb-5">{{item.title}}</header>
-                <p class="text-sm text-gray-600 pb-4">{{item.description}}</p>
-                 {% for feat in item.features %}
-                    <div class="flex flex-row items-start text-sm py-2">
-                        <img src="images/finger-direction.svg" height="20" width="20" class="inline-block" /> 
-                        <span class="pl-4">{{feat | safe}}</span>
-                    </div>
-                {% endfor %}
-            </article>
-        {% endfor %}
-    </section>
-</section>
+Page content goes here
