--- a/pages/molecules/molecules.njk
+++ b/pages/molecules/molecules.njk
@@ -19,4 +19,6 @@ nickname: "molecules"
 
 <hr/>
 <h2>Nav</h2>
-{{component('navs/nav1', typography.h4)}}
+<div class="bg-blue-100 py-2">
+{{component('navs/nav1', data.navbar)}}
+</div>
