--- a/styles/global.css
+++ b/styles/global.css
@@ -7,55 +7,81 @@
 /****  end imports  ********************************/
 
 @layer base {
-  body {
-    background-color: white;
-    color: var(--color__primary);
-    font-size: var(--base-font-size);
+    /****  start fonts  ********************************/
+    @font-face {
+        font-display: swap;
+        font-family: "PlayfairDisplay";
+        src: url("../fonts/PlayfairDisplay.woff2");
+        font-weight: 400;
+        font-style: normal;
+        unicode-range: U+000-5FF;
+    }
+    @font-face {
+      font-display: swap;
+      font-family: "Poppins";
+      src: url("../fonts/Poppins.woff2");
+      font-weight: 400;
+      font-style: normal;
+      unicode-range: U+000-5FF;
   }
-  a {
-    color: var(--color__anchor);
-    text-decoration: underline;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    padding-bottom: 1em;
-  }
-  h1 {
-    font-size: 2.4rem;
-    line-height: 3rem;
-  }
-  h2 {
-    font-size: 2.2rem;
-    line-height: 2.8rem;
-  }
-  h3 {
-    font-size: 2rem;
-    line-height: 2.6rem;
-  }
-  h4 {
-    font-size: 1.8rem;
-    line-height: 2.4rem;
-  }
-  h5 {
-    font-size: 1.6rem;
-    line-height: 2.2rem;
-  }
-  h6 {
-    font-size: 1.4rem;
-    line-height: 2rem;
-  }
-  .packages-shadow {
-    width: 0;
-    height: 0;
-    position: absolute;
-    z-index: 10;
-    top: 32px;
-    left: 0;
-    border-left: 8px solid transparent;
-    border-top: 8px solid #b21515;
-  }
+
+    body {
+        background-color: white;
+        color: var(--color__text);
+        font-size: var(--base-font-size);
+    }
+    a {
+        /* color: var(--color__anchor); */
+        text-decoration: underline;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        padding-bottom: 1em;
+    }
+    h1 {
+        font-size: 2.4rem;
+        line-height: 3rem;
+    }
+    h2 {
+        font-size: 2.2rem;
+        line-height: 2.8rem;
+    }
+    h3 {
+        font-size: 2rem;
+        line-height: 2.6rem;
+    }
+    h4 {
+        font-size: 1.8rem;
+        line-height: 2.4rem;
+    }
+    h5 {
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+    }
+    h6 {
+        font-size: 1.4rem;
+        line-height: 2rem;
+    }
+    .packages-shadow {
+        width: 0;
+        height: 0;
+        position: absolute;
+        z-index: 10;
+        top: 32px;
+        left: 0;
+        border-left: 8px solid transparent;
+        border-top: 8px solid #b21515;
+    }
+
+    /* font classes */
+    .font-fair {
+        font-family: "PlayfairDisplay", Arial, sans-serif;
+    }
+    .font-poppins {
+        font-family: "Poppins", Arial, sans-serif;
+    }
 }
