--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,12 @@
 /* colors */
 :root {
-    --color__primary: #333;
+    --color__primary: #33c8c6;
     --color__secondary: #efefef;
     --color__anchor: #0099ff;
+    --color__text: #333333;
+    --color__text-light: #666666;
+    --color__text-dark: #000000;
+    --color__contrast: #ffe701;
 }
 /* fonts */
 :root {
