--- a/pages/molecules/molecules.njk
+++ b/pages/molecules/molecules.njk
@@ -22,3 +22,6 @@ nickname: "molecules"
 <div class="bg-blue-100 py-2">
 {{component('navs/nav1', data.navbar)}}
 </div>
+
+
+<div class="button bg-contrast">abcd</div>
