--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,7 +3,7 @@
     --color__primary: #33c8c6;
     --color__secondary: #efefef;
     --color__anchor: #0099ff;
-    --color__text: #333333;
+    --color__text: #19232f;
     --color__text-light: #666666;
     --color__text-dark: #000000;
     --color__contrast: #ffe701;
