--- a/docs/molecules/molecules-sync.css
+++ b/docs/molecules/molecules-sync.css
@@ -5,7 +5,7 @@
     --color__primary: #33c8c6;
     --color__secondary: #efefef;
     --color__anchor: #0099ff;
-    --color__text: #333333;
+    --color__text: #19232f;
     --color__text-light: #666666;
     --color__text-dark: #000000;
     --color__contrast: #ffe701;
@@ -509,13 +509,13 @@ video {
         unicode-range: U+000-5FF;
     }
 @font-face {
-      font-display: swap;
-      font-family: "Poppins";
-      src: url("../fonts/Poppins.woff2");
-      font-weight: 400;
-      font-style: normal;
-      unicode-range: U+000-5FF;
-  }
+        font-display: swap;
+        font-family: "Poppins";
+        src: url("../fonts/Poppins.woff2");
+        font-weight: 400;
+        font-style: normal;
+        unicode-range: U+000-5FF;
+    }
 body {
         background-color: white;
         color: var(--color__text);
@@ -557,9 +557,62 @@ h6 {
         font-size: 1.4rem;
         line-height: 2rem;
     }
+.ty-50 {
+        transform: translateY(-50%);
+    }
+/* buttons */
+.button {
+        padding: 15px 45px;
+        border-radius: 45px;
+        -moz-border-radius: 45px;
+        -webkit-border-radius: 45px;
+        font-weight: 600;
+        transition: all 0.2s;
+    }
+.bg-dark{
+        color: black;
+        background-color: var(--color__text);        
+    }
+.bg-contrast {
+        color: black;
+        background-color: var(--color__contrast);
+    }
+@media (max-width: 767px) {
+        .sm\:bg-contrast {
+            color: black;
+            background-color: var(--color__contrast);
+        }
+        .button {
+            padding: 10px 15px;
+            border-radius: 30px;
+            -moz-border-radius: 30px;
+            -webkit-border-radius: 30px;
+            font-weight: 500;
+        }
+    }
+/* colors */
+.text-contrast {
+        color: var(--color__contrast);
+    }
 /* font classes */
+.font-fair {
+        font-family: "PlayfairDisplay", Arial, sans-serif;
+    }
 .font-poppins {
         font-family: "Poppins", Arial, sans-serif;
+    }
+.fixed-top {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+    }
+@media (max-width: 767px) { 
+        .fixed-top {
+           position: initial;
+           background: var(--color__text)!important;
+        }
     }
 .container {
     width: 100%;
@@ -605,21 +658,28 @@ h6 {
     white-space: nowrap;
     border-width: 0;
 }
-.visible {
-    visibility: visible;
-}
 .absolute {
     position: absolute;
 }
 .relative {
     position: relative;
 }
+.inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
+}
 .inset-x-0 {
     left: 0px;
     right: 0px;
 }
-.top-52 {
-    top: 13rem;
+.top-2\/4 {
+    top: 50%;
+}
+.left-0 {
+    left: 0px;
+}
+.right-0 {
+    right: 0px;
 }
 .-top-4 {
     top: -1rem;
@@ -627,11 +687,14 @@ h6 {
 .top-0 {
     top: 0px;
 }
+.z-10 {
+    z-index: 10;
+}
 .z-20 {
     z-index: 20;
 }
-.z-10 {
-    z-index: 10;
+.z-50 {
+    z-index: 50;
 }
 .m-auto {
     margin: auto;
@@ -644,14 +707,14 @@ h6 {
     margin-top: -0.5rem;
     margin-bottom: -0.5rem;
 }
+.mb-2 {
+    margin-bottom: 0.5rem;
+}
 .mt-2 {
     margin-top: 0.5rem;
 }
 .mt-3 {
     margin-top: 0.75rem;
-}
-.-mt-10 {
-    margin-top: -2.5rem;
 }
 .mt-1 {
     margin-top: 0.25rem;
@@ -689,20 +752,26 @@ h6 {
 .h-full {
     height: 100%;
 }
+.h-8 {
+    height: 2rem;
+}
 .h-4 {
     height: 1rem;
 }
 .h-5 {
     height: 1.25rem;
 }
-.h-10 {
-    height: 2.5rem;
+.h-20 {
+    height: 5rem;
 }
 .h-6 {
     height: 1.5rem;
 }
 .w-full {
     width: 100%;
+}
+.w-8 {
+    width: 2rem;
 }
 .w-4 {
     width: 1rem;
@@ -719,8 +788,11 @@ h6 {
 .w-6 {
     width: 1.5rem;
 }
-.max-w-screen-lg {
-    max-width: 1024px;
+.max-w-5xl {
+    max-width: 64rem;
+}
+.max-w-sm {
+    max-width: 24rem;
 }
 .max-w-xl {
     max-width: 36rem;
@@ -737,9 +809,6 @@ h6 {
 }
 .transform {
     transform: var(--tw-transform);
-}
-.auto-cols-fr {
-    grid-auto-columns: minmax(0, 1fr);
 }
 .auto-cols-max {
     grid-auto-columns: max-content;
@@ -776,9 +845,6 @@ h6 {
 }
 .justify-between {
     justify-content: space-between;
-}
-.justify-items-center {
-    justify-items: center;
 }
 .gap-2 {
     gap: 0.5rem;
@@ -856,13 +922,23 @@ h6 {
     --tw-bg-opacity: 1;
     background-color: rgba(219, 234, 254, var(--tw-bg-opacity));
 }
+.bg-gray-400 {
+    --tw-bg-opacity: 1;
+    background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
+}
 .bg-white {
     --tw-bg-opacity: 1;
     background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
+.bg-transparent {
+    background-color: transparent;
+}
 .bg-gray-800 {
     --tw-bg-opacity: 1;
     background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+}
+.bg-opacity-60 {
+    --tw-bg-opacity: 0.6;
 }
 .bg-cover {
     background-size: cover;
@@ -873,6 +949,10 @@ h6 {
 .p-2 {
     padding: 0.5rem;
 }
+.px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
 .py-2 {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
@@ -880,14 +960,6 @@ h6 {
 .px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
-}
-.px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-}
-.px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
 }
 .px-2 {
     padding-left: 0.5rem;
@@ -897,27 +969,13 @@ h6 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
 }
+.px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+}
 .py-6 {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-}
-.pt-3 {
-    padding-top: 0.75rem;
-}
-.pb-1 {
-    padding-bottom: 0.25rem;
-}
-.pl-5 {
-    padding-left: 1.25rem;
-}
-.pr-3 {
-    padding-right: 0.75rem;
-}
-.pl-3 {
-    padding-left: 0.75rem;
-}
-.pr-5 {
-    padding-right: 1.25rem;
 }
 .pt-6 {
     padding-top: 1.5rem;
@@ -928,11 +986,20 @@ h6 {
 .pt-1 {
     padding-top: 0.25rem;
 }
+.pt-3 {
+    padding-top: 0.75rem;
+}
 .pt-5 {
     padding-top: 1.25rem;
 }
 .pb-6 {
     padding-bottom: 1.5rem;
+}
+.pl-5 {
+    padding-left: 1.25rem;
+}
+.text-left {
+    text-align: left;
 }
 .text-center {
     text-align: center;
@@ -943,21 +1010,29 @@ h6 {
 .font-serif {
     font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
-.text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
+.text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
 }
 .text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
 }
+.text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+}
 .text-base {
     font-size: 1rem;
     line-height: 1.5rem;
 }
-.text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+.text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+}
+.text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
 }
 .font-bold {
     font-weight: 700;
@@ -974,6 +1049,13 @@ h6 {
 .leading-snug {
     line-height: 1.375;
 }
+.tracking-wider {
+    letter-spacing: 0.05em;
+}
+.text-white {
+    --tw-text-opacity: 1;
+    color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
 .text-green-300 {
     --tw-text-opacity: 1;
     color: rgba(110, 231, 183, var(--tw-text-opacity));
@@ -986,10 +1068,6 @@ h6 {
     --tw-text-opacity: 1;
     color: rgba(109, 40, 217, var(--tw-text-opacity));
 }
-.text-gray-800 {
-    --tw-text-opacity: 1;
-    color: rgba(31, 41, 55, var(--tw-text-opacity));
-}
 .text-gray-900 {
     --tw-text-opacity: 1;
     color: rgba(17, 24, 39, var(--tw-text-opacity));
@@ -998,13 +1076,13 @@ h6 {
     --tw-text-opacity: 1;
     color: rgba(107, 114, 128, var(--tw-text-opacity));
 }
+.text-gray-800 {
+    --tw-text-opacity: 1;
+    color: rgba(31, 41, 55, var(--tw-text-opacity));
+}
 .text-gray-400 {
     --tw-text-opacity: 1;
     color: rgba(156, 163, 175, var(--tw-text-opacity));
-}
-.text-white {
-    --tw-text-opacity: 1;
-    color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 .text-blue-600 {
     --tw-text-opacity: 1;
@@ -1111,11 +1189,26 @@ h6 {
     }
 }
 @media (min-width: 768px) {
+    .md\:float-right {
+        float: right;
+    }
+    .md\:mb-5 {
+        margin-bottom: 1.25rem;
+    }
+    .md\:mb-8 {
+        margin-bottom: 2rem;
+    }
     .md\:flex {
         display: flex;
     }
     .md\:hidden {
         display: none;
+    }
+    .md\:h-12 {
+        height: 3rem;
+    }
+    .md\:w-12 {
+        width: 3rem;
     }
     .md\:flex-1 {
         flex: 1 1 0%;
@@ -1127,6 +1220,21 @@ h6 {
         --tw-space-x-reverse: 0;
         margin-right: calc(2.5rem * var(--tw-space-x-reverse));
         margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+    }
+    .md\:px-0 {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .md\:pt-5 {
+        padding-top: 1.25rem;
+    }
+    .md\:text-6xl {
+        font-size: 3.75rem;
+        line-height: 1;
+    }
+    .md\:text-3xl {
+        font-size: 1.875rem;
+        line-height: 2.25rem;
     }
 }
 @media (min-width: 1024px) {
