--- a/pages/_includes/components/media-carousel.njk
+++ b/pages/_includes/components/media-carousel.njk
@@ -1,17 +1,17 @@
 {% macro media_carousel(slides, background_color, caption, splitNav = false) %}
     <figure class="{{ background_color if background_color }}">
     <media-carousel>
-        <div class="swiper-container w-full h-full" style="overflow: visible !important;">
+        <div class="swiper-container w-full h-full relative">
             {% if splitNav %}
-                <nav class="car-nav flex flex-row justify-between relative z-20 m-auto -mt-10 top-52">
-                    <div class="pt-3 pb-1 pl-5 pr-3 bg-ams-white shadow-md">
-                        <button class="carousel-button-prev inline-block w-4 h-4 transform rotate-45 justify-self-end border-b-2 border-l-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
-                            previous
+                <nav class="absolute inset-y-1/2 w-full flex flex-row justify-between items-center z-20 m-auto h-8 md:h-12">
+                    <div class="carousel-button-prev h-8 md:h-12 w-8 md:w-12 bg-gray-400 bg-opacity-60 shadow-md flex justify-center items-center">
+                        <button class="inline-block w-4 h-4 transform rotate-45 justify-self-end border-b-2 border-l-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
+                            
                         </button>
                     </div>
-                    <div class="pt-3 pb-1 pl-3 pr-5 bg-ams-white shadow-md">
-                        <button class="carousel-button-next inline-block w-4 h-4 transform rotate-45 justify-self-start border-t-2 border-r-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
-                            next
+                    <div class="carousel-button-next h-8 md:h-12 w-8 md:w-12 bg-gray-400 bg-opacity-60 shadow-md flex justify-center items-center">
+                        <button class="inline-block w-4 h-4 transform rotate-45 justify-self-start border-t-2 border-r-2 border-ams-gold focus:outline-none -indent-xl overflow-hidden">
+                            
                         </button>
                     </div>
                 </nav>
@@ -38,7 +38,7 @@
                                 <img 
                                     data-srcset="{{ default | imgObjSrcSet }}"
                                     data-src="{{ default.src }}.{{ default.type if default.type else 'jpg' }}" 
-                                    class="swiper-lazy w-full h-auto {{ 'px-5' if splitNav }}"
+                                    class="swiper-lazy w-full h-auto"
                                     sizes="{{ default.sizes if default.sizes else '75vw' }}" 
                                     alt="{{ default.imgalt }}">
                                 <div class="swiper-lazy-preloader"></div>
