--- a/pages/_includes/components/navs/nav1.njk
+++ b/pages/_includes/components/navs/nav1.njk
@@ -79,14 +79,14 @@
 
         {# Hot number #}
         <div class="hidden md:flex items-center justify-end space-x-8 md:flex-1 lg:w-0">
-            <a href="tel:+8801826191509" class="transition duration-500 ease-in-out hover:bg-red-600 px-2 py-1 text-base text-white bg-gray-800 hover:text-gray-200 no-underline rounded-full">
-                01826-191509
+            <a href="tel:+8801826191509" class="transition duration-500 ease-in-out hover:bg-yellow-600 px-2 py-1 text-base text-white hover:text-gray-200 no-underline rounded-full flex items-center">
+                <img src="images/phone.svg" height="16" width="16" class="w-4 h-4"> &nbsp; 01826-191509
             </a>
         </div>
     </div>
 
     <div class="flyby-mobile absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden z-50">
-        <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-dark divide-y-2 divide-gray-50">
+        <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-primary divide-y-2 divide-gray-50">
             <div class="pt-5 pb-6 px-5">
                 <div class="flex items-center justify-between">
                     {{company_logo()}}
