--- a/pages/index/index.njk
+++ b/pages/index/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: base.njk
 pagename: index
-meta_title: "Bay Cruise ship "
+meta_title: "Bay Cruise Ship "
 permalink: "docs/index.html"
 permalinkBypassOutputDir: true
 nickname: "You Thing"
