--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,8 +1,8 @@
 /* colors */
 :root {
-    --color__primary: #33c8c6;
+    --color__primary: #011a51;
     --color__secondary: #efefef;
-    --color__anchor: #0099ff;
+    --color__anchor: #204157;
     --color__text: #19232f;
     --color__text-light: #666666;
     --color__text-dark: #000000;
